<resources>
    <string name="app_name">Firebase_AngelSamora_RagirZebari</string>
    <string name="signup">Sign Up</string>
    <string name="name">Name</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="confirm_button">Confirm</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cs481">CS481</string>
</resources>