<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignupFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <EditText
            android:id="@+id/signupName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/name"
            android:inputType="text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/signupEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:ems="10"
            android:inputType="text"
            android:hint="@string/email"
            app:layout_constraintEnd_toEndOf="@+id/signupName"
            app:layout_constraintStart_toStartOf="@+id/signupName"
            app:layout_constraintTop_toBottomOf="@+id/signupName" />

        <EditText
            android:id="@+id/signupPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:ems="10"
            android:inputType="text"
            android:hint="@string/password"
            app:layout_constraintEnd_toEndOf="@+id/signupEmail"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/signupEmail"
            app:layout_constraintTop_toBottomOf="@+id/signupEmail" />

        <EditText
            android:id="@+id/signupConfirmPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:ems="10"
            android:inputType="textPassword"
            android:hint="@string/confirm_password"
            app:layout_constraintEnd_toEndOf="@+id/signupPassword"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/signupPassword"
            app:layout_constraintTop_toBottomOf="@+id/signupPassword" />

        <Button
            android:id="@+id/confirmSignup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/confirm_button"
            app:layout_constraintEnd_toEndOf="@+id/signupConfirmPassword"
            app:layout_constraintStart_toStartOf="@+id/signupConfirmPassword"
            app:layout_constraintTop_toBottomOf="@+id/signupConfirmPassword" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>